[package]
name = "ohlc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
num_cpus = "1.13.1"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "main"
harness = false